<resources>

    <!-- Main -->

    <string name="app_name">Feria Virtual Movil</string>
    <string name="nav_header_title">Main menu</string>
    <string name="nav_header_subtitle">emailusuario@feria.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Menus -->

    <string name="menu_home">Home</string>
    <string name="menu_sales">Current Sales</string>
    <string name="menu_process">My Processes</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_help">User manual</string>
    <string name="menu_logout">Logout</string>

    <!-- Login Activity -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_user_role">Only Productor and Transportista roles are allowed to use this app. Your role is %s. Please use web app for complete experience.</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed. Either email or password are not correct, please try again</string>
    <string name="close_app">Quit</string>
    <string name="launch_user_registry_web">Haven\'t an account? Register here!</string>

    <!-- Actions -->

    <string name="action_accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_undo">Undo</string>
    <string name="action_change">Change</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_settings">Settings</string>

    <!-- Profile fragment -->

    <string name="mpf_setting_pid">Personal ID</string>
    <string name="mpf_setting_email">Email</string>
    <string name="mpf_setting_name">Names</string>
    <string name="mpf_setting_lname">Last names</string>
    <string name="mpf_setting_phone">Phone</string>
    <string name="mpf_setting_direction">Direction</string>
    <string name="mpf_setting_country">Country</string>
    <string name="mpf_setting_usertype">User Type</string>
    <string name="mpf_setting_passwd">Password</string>
    <string name="mpf_setting_change_passwd">Change Password</string>
    <string name="mpf_setting_passwd_cur">Type current password</string>
    <string name="mpf_setting_passwd_new">New password</string>
    <string name="mpf_setting_passwd_new_r">Confirm new password</string>
    <string name="mpf_setting_passwd_done">Password changed</string>

    <!-- Sale Detail Activity -->

    <string name="sale_detail_act_title">Sale Detail</string>
    <string name="sale_detail_act_sale_date">Date Process</string>
    <string name="sale_detail_act_product_list">Product list</string>
    <string name="sale_detail_act_join">Join</string>
    <string name="sale_detail_act_request_author">Request origin</string>

    <!-- Sale list item -->
    <string name="li_sale_simple_author">Author\'s Name</string>
    <string name="li_sale_simple_date">Date</string>
    <string name="li_sale_simple_status">Status</string>
    <string name="li_sale_simple_request_summary">Requested items</string>
    <string name="li_sale_simple_comments">Comments</string>

    <!-- Settings Activity -->

    <string name="sact_title">Settings</string>
    <string name="sact_messages_header">Messages</string>
    <string name="sact_sync_header">Sync</string>
    <string name="sact_signature_title">Your signature</string>
    <string name="sact_reply_title">Default reply action</string>
    <string name="sact_sync_title">Sync email periodically</string>
    <string name="sact_attachment_title">Download incoming attachments</string>
    <string name="sact_attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="sact_attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Auction -->
    <string name="auact_title">Auction Section</string>
    <string name="auact_push_list">Push list</string>

    <!-- Other -->
    <string name="other_stub">stub</string>

    <!-- Error/Info messages -->

    <string name="err_msg_generic">An sudden error has occurred. Please try again later</string>
    <string name="err_mes_question">Question</string>
    <string name="err_mes_message">Message</string>
    <string name="err_mes_error">Error</string>
    <string name="err_mes_not_allowed">Not allowed</string>
    <string name="err_mes_not_avalaible">Not avalaible</string>
    <string name="err_mes_passwd_does_not_match">Passwords does not match</string>
    <string name="err_msg_logout_prompt">You really want to logout? You have to login with your credentials when you come back</string>
    <string name="err_msg_error_getting_user_info">Couldn\'t retrieve your user data. Try again later </string>

    <!-- Push Productor bid messages -->
    <string name="ppbd_title">Push a new bid</string>
    <string name="ppbd_prod">Choose a product</string>
    <string name="ppbd_item">Item</string>
    <string name="ppbd_quantity">How many? (Units, Kg)</string>
    <string name="ppbd_price">How much?</string>
    <string name="ppbd_push_detail">Bid Details</string>
    <string name="ppbd_push">Push</string>
    <string name="ppbd_update">Update push</string>
    <string name="ppbd_clean_item_help">Swipe to clean push</string>

    <!-- Push Info -->
    <string name="pii_total_cost">Total cost</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="push_update">Update</string>
    <string name="push_info">Push info</string>
    <string name="action_update">Update</string>
    <string name="action_delete">Delete</string>
    <string name="action_confirm">Confirm</string>
    <string name="confirm_delete_push">Are you sure to remove your push from this auction? You can push again later.</string>
    <string name="title_sale_process">Sale Process</string>
    <string name="sale_start_date">Started in</string>
    <string name="sale_end_date">Ends in</string>
    <string name="product_list">Product List</string>
    <string name="confirm_push_products">The products you input will be submitted to the system for this sale ¿Continue?</string>
    <string name="sale_type">Sale Type</string>
    <string name="product_added">Product added</string>
    <string name="err_mes_product_add_failed">Can\'t add product. Please try again</string>
    <string name="err_mes_operation_failed_due">The operation failed, due following reason: %s</string>
    <string name="err_code_str_generic">Unknown error</string>
    <string name="err_code_str_cant_recover_data">Can\'t recover data. Please check your internet connetion</string>
    <string name="err_code_str_ok">OK</string>
    <string name="desc_my_processes_frag">This list contains the sales process thas has already ended. Touch one element for details</string>
    <string name="product_summary">Product Summary</string>
    <string name="action_transport">Transport</string>
    <string name="feriavirtualmovil_version_str">Feria Virtual Móvil, version 2.0</string>
    <string name="empty_list">Empty List</string>
    <string name="mes_adv_add_items_to_list">Add items to view them on list, or refresh to check if are items added</string>
    <string name="mes_adv_no_items">Actually this list is empty. Slide to refresh this view and check if there are data</string>
    <string name="no_content">No content</string>
    <string name="err_mes_remove_push_failed">Can\'t remove push right now, please try again later</string>
    <string name="err_mes_remove_push_ok">Push removed</string>
    <string name="sale_type_s">Sale type %s</string>
    <string name="err_mes_update_push_ok">Push Updated</string>
    <string name="err_mes_update_push_failed">Can´t update push registry</string>
    <string name="err_mes_add_push_ok">Push created</string>
    <string name="err_mes_add_push_failed">Can´t create push registry</string>

</resources>