<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/sact_messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/sact_signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/sact_reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sact_sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sact_sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/sact_attachment_summary_off"
            app:summaryOn="@string/sact_attachment_summary_on"
            app:title="@string/sact_attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>