<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_black_48"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/baseline_shopping_cart_black_48"
            android:title="@string/menu_sales" />
        <item
            android:id="@+id/nav_processes"
            android:icon="@drawable/baseline_list_black_48"
            android:title="@string/menu_process" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_manage_accounts_black_48"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/baseline_help_black_48"
            android:title="@string/menu_help" />

    </group>
</menu>