<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="0dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="0dp"
    android:layout_marginBottom="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/csi_lblNacionalidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/mpf_setting_country"
            app:layout_constraintEnd_toStartOf="@+id/csi_lblEstadoVenta"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/csi_imgClienteExterno"
            app:layout_constraintStart_toStartOf="@+id/csi_lblFechaVenta"
            app:layout_constraintTop_toBottomOf="@+id/csi_lblFechaVenta" />

        <TextView
            android:id="@+id/csi_lblNombreNegocio"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:text="@string/li_sale_simple_author"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/csi_imgClienteExterno"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/csi_lblFechaVenta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/li_sale_simple_date"
            app:layout_constraintStart_toStartOf="@+id/csi_lblNombreNegocio"
            app:layout_constraintTop_toBottomOf="@+id/csi_lblNombreNegocio" />

        <TextView
            android:id="@+id/csi_lblComentariosVenta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/li_sale_simple_comments"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/csi_lblNacionalidad"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/csi_lblEstadoVenta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/li_sale_simple_status"
            android:textAlignment="textEnd"
            android:textColor="#009688"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/csi_lblNacionalidad"
            app:layout_constraintTop_toTopOf="@+id/csi_lblNacionalidad" />

        <ImageButton
            android:id="@+id/csi_imgClienteExterno"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:background="@drawable/boton_redondo"
            android:contentDescription="@string/mpf_setting_usertype"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/csi_lblComentariosVenta"
            app:layout_constraintEnd_toStartOf="@+id/csi_lblNombreNegocio"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.307"
            app:srcCompat="@drawable/logo_feriavirtual_compacto" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>