<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <ImageButton
            android:id="@+id/pii_imgUsuarioAutorPuja"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:background="@drawable/boton_redondo"
            android:contentDescription="@string/mpf_setting_usertype"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/pii_lblNombreUsuario"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_feriavirtual_compacto" />

        <TextView
            android:id="@+id/pii_lblNombreUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/other_stub"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pii_imgUsuarioAutorPuja"
            app:layout_constraintTop_toTopOf="@+id/pii_imgUsuarioAutorPuja" />

        <TextView
            android:id="@+id/pii_lblFechaPuja"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/li_sale_simple_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pii_lblCostoTotalPuja"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pii_imgUsuarioAutorPuja"
            app:layout_constraintTop_toBottomOf="@+id/pii_lblNombreUsuario" />

        <TextView
            android:id="@+id/pii_lblCostoTotalPuja"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/pii_total_cost"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#009688"
            app:layout_constraintBottom_toBottomOf="@+id/pii_lblFechaPuja"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pii_lblFechaPuja"
            app:layout_constraintTop_toTopOf="@+id/pii_lblFechaPuja" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>